test/files/neg/macro-override-macro-overrides-macrotype-b.check
Macros_Test_2.scala:14: error: macro expansion B violates bounds  <: C of the overridden type T in trait T1
  type T = M.T
             ^
one error found
